[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toto"
version = "0.1.0"
dependencies = [
    "paramiko",
    "docker",
    "pyyaml",
    "click",
    "sqlalchemy",
    "flake8",
    "python-dotenv",
    "PyGithub",
    "fsspec",
    "influxdb-client",
    "asyncua",
    "flask",
    "flask-sqlalchemy",
    "flask-admin",
    "flask-login",
    "flask-wtf",
    "WTForms-SQLAlchemy",
    "python-on-whales",
    "rq",
    "PyKSQL @ git+https://github.com/rwuthric/PyKSQL.git",
    "python-mtc2kafka @ git+https://github.com/rwuthric/python-mtc2kafka.git"
]
